--- a/CSS/Structure.css
+++ b/CSS/Structure.css
@@ -50,7 +50,8 @@ a {
   margin-top: 0;
   position: relative;
   width: 100%;
-  padding-top: 10px;
+  padding: 20px 0;
+  font-size: 24px;
 }
 
 .Footer {
@@ -62,7 +63,8 @@ a {
   position: relative;
   color: #000000;
   width: 100%;
-  padding-top: 10px;
+  padding: 20px 0;
+  font-size: 24px;
 }
 
 .Header:hover {
