--- a/CSS/Structure.css
+++ b/CSS/Structure.css
@@ -1,158 +1,88 @@
-hr {
-  width: 100%;
-  border: 1px solid orange;
-}
-
-.Buttons {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    padding: 20px;
+body {
+  font-family: Arial, sans-serif;
+  background-color: #1d1f21;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100vh;
 }
  
-.Btn {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    font-size: 16px;
-    color: #000000;
-    background: linear-gradient(90deg, #90ff08, #cdff05);
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background 0.3s, color 0.3s;
-    font-weight: bold;
-    margin: 10px;
-    width: 540px;
-    height: 750px;
-    text-align: center;
-    padding: 20px;
-    box-sizing: border-box;
+a {
+  text-decoration: none;
+  color: #00c853;
 }
 
-.Btn img {
-    max-width: 500px;
-    max-height: 500px;
-    width: auto;
-    height: auto;
-    object-fit: contain;
-    margin-top: 20px;
-    border-radius: 5px;
+@keyframes Moving_Color_Header {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
-.Btn hr {
-    margin-top: 20px;
-    width: 100%;
-    border: 3px solid black;
+@keyframes Moving_Color_Footer {
+  0% {
+    background-position: 100% 50%;
+  }
+
+  50% {
+    background-position: 0% 50%;
+  }
+
+  100% {
+    background-position: 100% 50%;
+  }
 }
 
-.Btn .discount {
-    color: black;
-    font-size: 18px;
-    margin-top: 10px;
+.Header {
+  background: linear-gradient(90deg, #26c6da, #66bb6a, #ef5350, #ab47bc);
+  background-size: 400% 400%;
+  animation: Moving_Color_Header 7s ease infinite;
+  text-align: center;
+  margin-top: 0;
+  position: relative;
+  width: 100%;
+  padding: 20px 0;
+  font-size: 24px;
 }
 
-.Btn:hover {
-    color: #ffffff;
+.Footer {
+  background: linear-gradient(90deg, #26c6da, #66bb6a, #ef5350, #ab47bc);
+  background-size: 400% 400%;
+  animation: Moving_Color_Footer 7s ease infinite;
+  text-align: center;
+  margin-top: 0;
+  position: relative;
+  color: #000000;
+  width: 100%;
+  padding: 20px 0;
+  font-size: 24px;
 }
 
-@media (max-width: 767px) {
-    .Btn {
-        width: 100%;
-    }
+.Header:hover {
+  animation-play-state: paused;
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
-    .Btn {
-        width: 48%;
-    }
+.Footer:hover {
+  animation-play-state: paused;
 }
 
-@media (min-width: 1025px) {
-    .Btn {
-        width: 30%;
-    }
-}
-
-@media (min-width: 1920px) {
-    .Btn {
-        width: 18%;
-    }
-}
-
-/* Popup styling */
-.Popup {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    align-items: center;
-    justify-content: center;
-}
-
-.PopupContent {
-    background-color: #333;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 600px;
-    text-align: center;
-    color: #fff;
-}
-
-.CloseButton {
-    color: red;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.CloseButton:hover,
-.CloseButton:focus {
-    color: #f90000;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-hr {
-    width: 100%;
-    border: 1px solid orange;
-}
-
-.popup-text-title {
-    color: #ff007f;
-}
-
-.popup-text-value {
-    color: #00ff7f;
-}
-
-.popup-red-text {
-    color: #ff007f;
-}
-
-.popup-green-text {
-    color: #00ff7f;
-}
-
-.number-input {
-    width: 80%;
-    background-color: #444;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    text-align: center;
-    font-size: 16px;
-}
-
-.placeholder {
-    color: #999;
+.Content {
+  color: #eceff1;
+  font-size: small;
+  font-weight: bold;
+  width: 100%;
+  text-align: center;
+  padding: 20px;
+  padding-left: 50px;
+  box-sizing: border-box;
+  gap: 15px;
 }
