--- a/CSS/index.css
+++ b/CSS/index.css
@@ -26,7 +26,7 @@ hr {
     font-weight: bold;
     margin: 10px;
     width: 540px;
-    height: 750px;
+    height: 300px;
     text-align: center;
     padding: 20px;
     box-sizing: border-box;
@@ -39,24 +39,20 @@ hr {
     height: auto;
     object-fit: contain;
     margin-top: 20px;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 .Btn hr {
-    margin-top: 20px;
+    margin-top: 25px;
     width: 100%;
-    border: 3px solid black;
+    border: 3px solid rgb(0, 0, 0);
 }
 
 .Btn .discount {
-    color: black;
-    font-size: 18px;
+    color: rgb(0, 0, 0);
+    font-size: 18px; 
     margin-top: 10px;
-}
-
-.Btn:hover {
-    color: #ffffff;
-}
+} 
 
 @media (max-width: 767px) {
     .Btn {
@@ -86,16 +82,16 @@ hr {
 .Popup {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 10;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8);
-    align-items: center;
-    justify-content: center;
+    align-items: center;  
+    justify-content: center;  
 }
-
+ 
 .PopupContent {
     background-color: #333;
     padding: 20px;
@@ -109,14 +105,14 @@ hr {
 .CloseButton {
     color: red;
     float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
+    font-size: 50px;
+    font-weight: bold; 
+    cursor: pointer; 
 }
 
 .CloseButton:hover,
-.CloseButton:focus {
-    color: #f90000;
+.CloseButton:focus { 
+    color: #00ddff;
     text-decoration: none;
     cursor: pointer;
 }
@@ -128,27 +124,27 @@ hr {
 
 .popup-text-title {
     color: #ff007f;
-}
+} 
 
 .popup-text-value {
-    color: #00ff7f;
-}
+    color: #0dff00;
+} 
 
 .popup-red-text {
     color: #ff007f;
 }
 
 .popup-green-text {
-    color: #00ff7f;
+    color: #0dff00;
 }
 
 .number-input {
     width: 80%;
-    background-color: #444;
-    color: #fff;
+    background-color: #1e1e1e;
+    color: #fff; 
     border: none;
-    border-radius: 5px;
-    padding: 10px;
+    border-radius: 5px; 
+    padding: 10px; 
     text-align: center;
     font-size: 16px;
 }
