--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,6 +1,7 @@
+/* Base Styling */
 hr {
-  width: 100%;
-  border: 1px solid orange;
+    width: 100%;
+    border: 1px solid orange;
 }
 
 .Buttons {
@@ -33,10 +34,8 @@ hr {
 }
 
 .Btn img {
-    max-width: 500px;
-    max-height: 500px;
-    width: auto;
-    height: auto;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: contain;
     margin-top: 20px;
     border-radius: 10px;
@@ -54,9 +53,17 @@ hr {
     margin-top: 10px;
 } 
 
+/* Responsive Design */
 @media (max-width: 767px) {
     .Btn {
         width: 100%;
+        height: auto;
+        margin: 10px 20px; /* Ensures 20px margin left and right */
+    }
+
+    .Btn img {
+        width: 80%;
+        height: auto;
     }
 }
 
