--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,161 +1,190 @@
-/* Base Styling */
 hr {
-    width: 100%;
-    border: 1px solid orange;
+  width: 100%;
+  border: 1px solid orange;
+}
+
+.Tags {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin: 20px 0;
+  overflow-x: auto;
+  white-space: nowrap;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.Tags::-webkit-scrollbar {
+  display: none;
+}
+
+.TagButton {
+  padding: 10px 20px;
+  background-color: #45454572;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background 0.3s, color 0.3s;
+  font-weight: bold;
+}
+
+.TagButton:hover {
+  background-color: #282a2e00;
+}
+
+.TagButton.selected {
+  background-color: rgba(57, 255, 20, 0.75);
+  /* Neon green */
+  color: black;
 }
 
 .Buttons {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    padding: 20px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 20px;
 }
- 
+
 .Btn {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    font-size: 16px;
-    color: #000000;
-    background: linear-gradient(90deg, #90ff08, #cdff05);
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background 0.3s, color 0.3s;
-    font-weight: bold;
-    margin: 10px;
-    width: 540px;
-    height: 550px;
-    text-align: center;
-    padding: 20px;
-    box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: 16px;
+  color: #000000;
+  background: linear-gradient(90deg, #90ff08, #cdff05);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background 0.3s, color 0.3s;
+  font-weight: bold;
+  margin: 10px;
+  width: 540px;
+  height: 600px;
+  text-align: center;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .Btn img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-    margin-top: 20px;
-    border-radius: 10px;
+  max-width: 500px;
+  max-height: 500px;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  margin-top: 20px;
+  border-radius: 10px;
 }
 
 .Btn hr {
-    margin-top: 25px;
-    width: 100%;
-    border: 3px solid rgb(0, 0, 0);
+  margin-top: 25px;
+  width: 100%;
+  border: 3px solid rgb(0, 0, 0);
 }
 
 .Btn .discount {
-    color: rgb(0, 0, 0);
-    font-size: 18px; 
-    margin-top: 10px;
-} 
+  color: rgb(0, 0, 0);
+  font-size: 18px;
+  margin-top: 10px;
+}
 
-/* Responsive Design */
 @media (max-width: 767px) {
-    .Btn {
-        width: 100%;
-        height: auto;
-        margin: 10px 20px; /* Ensures 20px margin left and right */
-    }
-
-    .Btn img {
-        width: 80%;
-        height: auto;
-    }
+  .Btn {
+    width: 100%;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
-    .Btn {
-        width: 48%;
-    }
+  .Btn {
+    width: 48%;
+  }
 }
 
 @media (min-width: 1025px) {
-    .Btn {
-        width: 30%;
-    }
+  .Btn {
+    width: 30%;
+  }
 }
 
 @media (min-width: 1920px) {
-    .Btn {
-        width: 18%;
-    }
+  .Btn {
+    width: 18%;
+  }
 }
 
 /* Popup styling */
 .Popup {
-    display: none;
-    position: fixed;
-    z-index: 10;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    align-items: center;  
-    justify-content: center;  
+  display: none;
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  align-items: center;
+  justify-content: center;
 }
- 
+
 .PopupContent {
-    background-color: #333;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 550px;
-    text-align: center;
-    color: #fff;
+  background-color: #333;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 600px;
+  text-align: center;
+  color: #fff;
 }
 
 .CloseButton {
-    color: red;
-    float: right;
-    font-size: 50px;
-    font-weight: bold; 
-    cursor: pointer; 
+  color: red;
+  float: right;
+  font-size: 50px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .CloseButton:hover,
-.CloseButton:focus { 
-    color: #00ddff;
-    text-decoration: none;
-    cursor: pointer;
+.CloseButton:focus {
+  color: #00ddff;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 hr {
-    width: 100%;
-    border: 1px solid orange;
+  width: 100%;
+  border: 1px solid orange;
 }
 
 .popup-text-title {
-    color: #ff007f;
-} 
+  color: #ff007f;
+}
 
 .popup-text-value {
-    color: #0dff00;
-} 
+  color: #0dff00;
+}
 
 .popup-red-text {
-    color: #ff007f;
+  color: #ff007f;
 }
 
 .popup-green-text {
-    color: #0dff00;
+  color: #0dff00;
 }
 
 .number-input {
-    width: 80%;
-    background-color: #1e1e1e;
-    color: #fff; 
-    border: none;
-    border-radius: 5px; 
-    padding: 10px; 
-    text-align: center;
-    font-size: 16px;
+  width: 80%;
+  background-color: #1e1e1e;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  text-align: center;
+  font-size: 16px;
 }
 
 .placeholder {
-    color: #999;
+  color: #999;
 }
