--- a/CSS/index.css
+++ b/CSS/index.css
@@ -35,7 +35,6 @@ hr {
 
 .TagButton.selected {
   background-color: rgba(57, 255, 20, 0.75);
-  /* Neon green */
   color: black;
 }
 
@@ -69,8 +68,8 @@ hr {
 }
 
 .Btn img {
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 500px;
+  max-height: 500px;
   width: 500px;
   height: 500px;
   object-fit: contain;
