--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,6 +3,7 @@ hr {
   border: 1px solid orange;
 }
 
+/* Other Styles */
 .Tags {
   display: flex;
   justify-content: center;
@@ -35,6 +36,7 @@ hr {
 
 .TagButton.selected {
   background-color: rgba(57, 255, 20, 0.75);
+  /* Neon green */
   color: black;
 }
 
@@ -69,9 +71,8 @@ hr {
 
 .Btn img {
   max-width: 500px;
-  max-height: 500px;
-  width: 500px;
-  height: 500px;
+  width: 100%;
+  height: auto; /* Maintain aspect ratio */
   object-fit: contain;
   margin-top: 20px;
   border-radius: 10px;
@@ -79,7 +80,6 @@ hr {
 
 .Btn hr {
   margin-top: 25px;
-  width: 100%;
   border: 3px solid rgb(0, 0, 0);
 }
 
@@ -149,11 +149,6 @@ hr {
   color: #00ddff;
   text-decoration: none;
   cursor: pointer;
-}
-
-hr {
-  width: 100%;
-  border: 1px solid orange;
 }
 
 .popup-text-title {
