--- a/CSS/index.css
+++ b/CSS/index.css
@@ -30,20 +30,20 @@ hr {
     text-align: center;
     padding: 20px;
     box-sizing: border-box;
+    position: relative;
 }
 
 .Btn img {
-    max-width: 500px;
-    max-height: 500px;
-    width: auto;
-    height: auto;
+    max-width: 460px;
+    max-height: 460px;
     object-fit: contain;
-    margin-top: 20px;
+    margin: 20px;
     border-radius: 10px;
 }
 
 .Btn hr {
-    margin-top: 25px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     width: 100%;
     border: 3px solid rgb(0, 0, 0);
 }
