--- a/CSS/index.css
+++ b/CSS/index.css
@@ -34,10 +34,11 @@ hr {
 }
 
 .Btn img {
-    max-width: 460px;
-    max-height: 460px;
+    width: calc(100% - 40px); /* Adjust the width to fit within the button with 20px gap on each side */
+    height: auto; /* Maintain aspect ratio */
     object-fit: contain;
-    margin: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     border-radius: 10px;
 }
 
