--- a/CSS/index.css
+++ b/CSS/index.css
@@ -26,7 +26,7 @@ hr {
     font-weight: bold;
     margin: 10px;
     width: 540px;
-    height: 600px;
+    height: 350px;
     text-align: center;
     padding: 20px;
     box-sizing: border-box;
@@ -34,8 +34,8 @@ hr {
 }
 
 .Btn img {
-    width: calc(100% - 40px); /* Adjust the width to fit within the button with 20px gap on each side */
-    height: auto; /* Maintain aspect ratio */
+    width: calc(100% - 40px);
+    height: auto;
     object-fit: contain;
     margin-top: 20px;
     margin-bottom: 20px;
