--- a/CSS/Structure.css
+++ b/CSS/Structure.css
@@ -43,7 +43,7 @@ a {
 }
 
 .Header {
-  background: linear-gradient(90deg, #26c6da, #66bb6a, #ef5350, #ab47bc);
+  background: #85c1e9;
   background-size: 400% 400%;
   animation: Moving_Color_Header 7s ease infinite;
   text-align: center;
